# dynamical-system

./: README.md  pyproject.toml
src/dynamical_system/: ds.ipynb  dynamical_system.ipynb  fixed_point.ipynb  fixed_point_seq.ipynb  henon_map.ipynb  jacob.ipynb  logistic_equation.ipynb  logistic_growth.ipynb  logistic_growth_seq.ipynb  system_modeling.ipynb
src/dynamical_system/appendix/: app1.ipynb  app2.ipynb  app3.ipynb
src/dynamical_system/draft/: henon_map.ipynb  ode.ipynb
src/dynamical_system/draft/model/: henon_map.py
src/dynamical_system/model/: henon_map.py  logistic_growth.py
