[tool.poetry]
name = "dynamical-system"
version = "0.1.0"
description = ""
authors = ["iChemy <controlyuu.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "dynamical_system", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
jupyterlab = "^4.1.5"
jupyterlab-code-formatter = "^2.2.1"
black = "^24.3.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
